sorted/tests/04-variants-with-data.stderr
error: Dyn should sort before Fmt
  --> $DIR/04-variants-with-data.rs:19:5
   |
19 |     Dyn(Box<dyn StdError>),
   |     ^^^
